[package]
name = "aesni"
version = "0.4.1"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES (Rijndael) block ciphers implementation using AES-NI"
documentation = "https://docs.rs/aesni"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = { path = "../block-cipher-trait" }
opaque-debug = "0.1"
stream-cipher = { path = "../stream-cipher" }

[dev-dependencies]
block-cipher-trait = { path = "../block-cipher-trait" }
stream-cipher = { path = "../stream-cipher" }

[features]
default = ["ctr"]
ctr = []
nocheck = []

[workspace]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes,+ssse3"]
rustdoc-args = ["-C", "target-feature=+aes,+ssse3"]
